--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/wbdv
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:3306/${DB_SCHEMA}
+#spring.datasource.url=mysql://bcc63284afad13:bcdfac50@us-cdbr-iron-east-02.cleardb.net/heroku_158fe51fe0b36b9?reconnect=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
